fixed css flex on wraper

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -103,8 +103,6 @@ html {
     margin: auto;  
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
     margin-bottom: 5%;
 }
 .wrapper1{
